2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeState.cs,
	  MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Changed some accessibilities
	  to internal.

2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectSolutionPad.cs,
	  MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs,
	  MonoDevelop.Ide.Gui.Pads/NodeCommandHandler.cs,
	  MonoDevelop.Ide.Gui.Pads/ITreeBuilderContext.cs,
	  MonoDevelop.Ide.Gui.Pads/NodeState.cs,
	  MonoDevelop.Ide.Gui.Pads/SolutionPad.cs,
	  MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs,
	  MonoDevelop.Ide.Codons/SolutionPadCodon.cs: Splitted TreeViewPad into
	  pad and widget. (I needed the widget elsewhere too.)

2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/DisplayBindingService.cs: Fixed bug in display binding
	  service.

2008-02-05  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: End build and run operations
	  when the solution is closed (which includes closing MD). Fixes "Bug
	  358367 - MD hangs on exit if XSP is still running" and "Bug 356837 -
	  Built app doesn't close when solution closes".

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/IFoldable.cs,
	  MonoDevelop.Ide.Commands/EditCommands.cs, MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.mdp, Makefile.am,
	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Added some folding commands.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.addin.xml: Fixed a label.

2008-02-04  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Commands/FileCommands.cs: Dispose new file dialog. Fixes
	  "Bug 358361 - Have to hit esc twice to close the file/new file dialog".
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs, gtk-gui/gui.stetic:
	  Set title on "New File" window window. Partial workaround for "Bug
	  358370 - Add new file dialog says "unknown" in the window title".
