@@ -377,6 +377,8 @@
     <File name="MonoDevelop.Ide.Dom/TypeParameter.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Ide.Gui.Content/IFoldable.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.Ide.Dom.Output/OutputFlags.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.Ide.Dom.Output/AmbienceService.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
